<resources>
    <string name="app_name">Firespeed</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, please enter at least 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register here!</string>
    <string name="btn_link_to_login">Already registered. Login here!</string>
    <string name="btn_forgot_password">Forgot your password? Click here.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="image_contentDescription">App Logo</string>
    <string name="web_client_id">95382164174-da993s6b69qurdjagbjjmvg7q0kab7tc.apps.googleusercontent.com</string>
    <string name="other_login_options">Other Login Options</string>
    <string name="old_password">Old Password</string>
    <string name="display_name">Display Name</string>
    <string name="change_display_name">change your display name</string>
    <string name="the_speed_limit_is">The speed limit is:</string>
    <string name="title_activity_maps">Map</string>


</resources>
