<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayoutMain"
            android:layout_above="@+id/relLayoutBotBar">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:contentDescription="@string/image_contentDescription"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/welcome_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/old_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/new_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_new_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/old_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/new_pass"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/display_name"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/changeEmail"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_change"
                        android:textColor="@color/textOnPrimary"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/changePass"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_change"
                        android:textColor="@color/textOnPrimary"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/send"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_send"
                        android:textColor="@color/textOnPrimary"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/change_name"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_change"
                        android:textColor="@color/textOnPrimary"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/change_name_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/change_display_name"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/change_email_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/change_email"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/change_password_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/change_password"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/sending_pass_reset_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/send_password_reset_email"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/remove_user_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/remove_user"
                        android:background="@color/colorPrimaryLight"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/sign_out"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="@string/btn_sign_out"
                        android:textColor="@color/primaryText"
                        android:textStyle="bold" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/relLayoutBotBar"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavBar"
                android:background="@drawable/white_border_top"
                app:menu="@menu/bottom_navigation_menu">

            </com.google.android.material.bottomnavigation.BottomNavigationView>

        </RelativeLayout>
    </RelativeLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>